avoid placeholder image distortion for image widget
- we don't want to fit to cover the placeholder svg
- Added placeholder class to placeholder
- use p tag instead of div for description bringing
  it in line with the teaser block

--- a/packages/volto/theme/themes/pastanaga/extras/blocks.less
+++ b/packages/volto/theme/themes/pastanaga/extras/blocks.less
@@ -447,7 +447,6 @@ div.image-upload-widget-image {
 
   .toolbar-wrapper {
     display: flex;
-    height: 4em;
     flex-direction: column;
     justify-content: flex-end;
   }
